--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-international-phone": "^4.2.6",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0"
