--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.2.3",
+    "async-mutex": "^0.5.0",
     "next-themes": "^0.2.1",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
