--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-international-phone": "^4.2.6",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
