--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-international-phone": "^4.2.6",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
