--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-international-phone": "^4.2.6",
+    "react-paginate": "^8.2.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
