--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.3",
     "async-mutex": "^0.5.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "next-themes": "^0.2.1",
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
