--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.3",
     "async-mutex": "^0.5.0",
+    "dayjs": "^1.11.11",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "next-themes": "^0.2.1",
