--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,19 +1,19 @@
 {
-    "version": 2,
-    "builds": [
+   "version": 2,
+   "builds": [
       {
-        "src": "./app.js",
-        "use": "@vercel/node"
+         "src": "./index.js",
+         "use": "@vercel/node"
       }
-    ],
-    "routes": [
+   ],
+   "routes": [
       {
-        "src": "/(.*)",
-        "dest": "./app.js",
-        "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-        "headers": {
-          "Access-Control-Allow-Origin": "*"
-        }
+         "src": "/(.*)",
+         "dest": "/",
+         "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+         "headers": {
+            "Access-Control-Allow-Origin": "*"
+         }
       }
-    ]
-  }
+   ]
+}
